Fix home screen on iOS

--- a/resources/sass/_grid.scss
+++ b/resources/sass/_grid.scss
@@ -213,7 +213,7 @@ $min-w: 15rem;
         }
         /* autoprefixer: ignore next */
         mask-composite: intersect;
-        -webkit-mask-composite: source-in, xor;
+        -webkit-mask-composite: xor;
 
         &:nth-of-type(3), &:nth-of-type(4) { flex-direction: column-reverse; }
 
